# python-graphmix

./: .bumpversion.cfg  .cookiecutterrc  .coveragerc  .gitignore  .pre-commit-config.yaml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE  README.rst  pyproject.toml  pytest.ini  setup.py  tox.ini
.github/workflows/: github-actions.yml
ci/: bootstrap.py  requirements.txt
docs/: conf.py  installation.rst  requirements.txt  usage.rst
docs/reference/: graphmix.rst  index.rst
examples/: graphmix_examples.ipynb
src/graphmix/: __init__.py  __main__.py  cli.py  config.py  core.py  location.py
src/graphmix/chemistry/: chemical.py  dilution.py  units.py
src/graphmix/chemistry/adapters/: repository.py
src/graphmix/chemistry/service_layer/: pubchem.py  registry.py  unit_of_work.py
src/graphmix/core/: repository.py  unit_of_work.py  util.py
src/graphmix/core/sqlmodel/: repository.py  unit_of_work.py
src/graphmix/experiment/: experiment.py
src/graphmix/graph/: analysis.py  builder.py  drawing.py  graph.py  model.py  node.py  protocol.py  solution.py
src/graphmix/graph/builder/: standards.py
src/graphmix/liquid_handling/: liquid_handler.py  robot.py
tests/: conftest.py  test_cli.py  test_core.py
tests/chemical/e2e/: test_registry.py
tests/chemical/integration/: test_repository.py
tests/chemical/unit/: test_units.py
tests/e2e/chemical/: test_registry.py
tests/graph/unit/: test_graph.py
tests/integration/: test_chemical_repository.py
tests/integration/chemical/: test_uow.py
tests/integration/liquid_handling/: test_pylabrobot.py
tests/unit/: test_chemical.py  test_location.py
tests/unit/chemical/unit/: test_chemical.py  test_units.py
tests/unit/graph/: test_graph.py  test_protocol.py  test_solution.py
tests/unit/graph/builder/: test_standards.py
tests/unit/liquid_handling/: test_liquid_handler.py
